overlap fix

--- a/app/client/stylesheets/_sidebar.scss
+++ b/app/client/stylesheets/_sidebar.scss
@@ -44,7 +44,6 @@
     font-size: .8em;
     text-align: center;
     padding: 16px;
-    position: absolute;
     left: 0;
     right: 0;
     bottom: 16px;
@@ -103,9 +102,5 @@
       @include transform(translate3d(0,0,0));
       padding: 12px;
     }
-    .note {
-      display: none;
-    }
-
   }
 }
